Created an emitter